--- a/front.html
+++ b/front.html
@@ -13,14 +13,22 @@
 </head>
 <body>
 <input type="button" value="test1" onclick="test1()">
+<p>Если нажать по кнопке первый раз: браузер сделает XHR запрос на сайт back.local и сохранит на сайте back.local куку test1f=f1</p>
+<p>Если нажать по кнопке второй раз: браузер сделает XHR запрос на сайт back.local при этом в запросе будет указана кука test1f=f1
+    (словно запрос идет от сайта back.local, а по коду ниже видно, что мы никаких кук не передаем, браузер делает это за нас
+    благодаря тому, что мы в XMLHttpRequest указали withCredentials = true)</p>
 <script>
-    let invocation = new XMLHttpRequest();
+    let xhr = new XMLHttpRequest();
+        // попросим браузер запомнить куки на сайте back.local (куки которые выставляет back.local)
+        // по факту запомнится только кука с параметрами: 
+        xhr.withCredentials = true;
+        // xhr.setRequestHeader("Content-Type", "application/json");
     let url = 'https://back.local:8902';
     let body = '{"login":"yapro", "password":"pa$$word"}';
 
     function test1() {
-        invocation.open('POST', url + "/test1", true);
-        invocation.send(body);
+        xhr.open('POST', url + "/test1", true);
+        xhr.send(body);
     }
 </script>
 </body>
